fix image on hover and border overflow

--- a/src/components/animations/OverlayedImage.module.css
+++ b/src/components/animations/OverlayedImage.module.css
@@ -1,4 +1,10 @@
-
+.wrapper{
+  border-radius: 4px;
+  position: relative;  
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
 
 .imageOverlay {
   position: absolute;
@@ -19,8 +25,9 @@
   inset: 0;
   background-color: var(--navy);
   mix-blend-mode: screen;
-  z-index: 1;
+  z-index: 0;
   border-radius: 4px;
+  overflow: hidden;
 }
 
 .image {
