--- a/src/sections/About/About.module.css
+++ b/src/sections/About/About.module.css
@@ -29,9 +29,16 @@
   width: 280px;
 }
 
+.imageWrapper{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  background-color: var(--navy);
+}
 
 .imageBorder {
-  content: "";
+
   position: absolute;
   display: block;
   width: 100%;
@@ -39,7 +46,7 @@
   border: 2px solid var(--green);
   top: 14px;
   left: 14px;
-  border-radius: 4px;
+  border-radius: 10px;
 }
 
 .textContent p{
